# RGPDpseudonymizer

./: .codecov.yml  .gitignore  404.html  BUG-FIX-TEST-HYPHENATED-PSEUDONYMS.md  CHANGELOG.md  CI-QUALITY-REPORT-2026-01-29.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  SECURITY.md  STORY-2.8-SUMMARY.md  SUPPORT.md  camembertNER.ipynb  compound_names_analysis.txt  datasetGenerator.ipynb  gdpr-pseudo-gui.spec  index.html  mkdocs.yml  mypy.ini  nameBaseGenerator.ipynb  nameFinder.ipynb  pyproject.toml  pytest.ini  run-quality-checks.sh  sitemap.xml  spacy_performance_output.txt  stanza_benchmark_output.txt  stanza_performance_output.txt  validation_output.txt
.ai/: debug-log.md  qa-fix-validation-report.md  story-1.1-dod-checklist.md
.bmad-core/: core-config.yaml  install-manifest.yaml
.bmad-core/data/: technical-preferences.md
.bmad-infrastructure-devops/: install-manifest.yaml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: accuracy.yaml  build-executables.yaml  ci.yaml  code-quality.yaml  docs.yaml  performance.yaml  release.yaml
CLI-REFERENCE/: index.html
api-reference/: index.html
config/: detection_patterns.yaml
data/: dataset.csv  dataset_1.csv  first_names_1.csv  last_names_1.csv
data/pseudonyms/: lotr.json  neutral.json  star_wars.json
docs/: ALPHA-INSTALL.md  ALPHA-QUICKSTART.md  ALPHA-TESTING-PROTOCOL.md  BACKLOG.md  CLI-REFERENCE.fr.md  CLI-REFERENCE.md  DELIVERABLES-SUMMARY-2026-01-16.md  PM-APPROVAL-CHECKLIST.md  api-reference.fr.md  api-reference.md  architecture.md  brainstorming-session-results.md  brief.md  ci-cd.md  faq.fr.md  faq.md  gui-guide.fr.md  gui-guide.md  hybrid-benchmark-report.md  hybrid-detection.md  i18n-glossary.csv  index.fr.md  index.md  installation-validation-report.md  installation.fr.md  installation.md  llm-validation-report.md  methodology.fr.md  methodology.md  metrics-tracking.md  module-dependencies.md  nlp-benchmark-report.md  positioning-messaging-v2-assisted.md  prd.md  refactoring-plan.md  release-announcement-v1.0.0.md  release-announcement-v1.1.md  release-announcement-v2.0.md  troubleshooting.fr.md  troubleshooting.md  (+5 more)
docs/architecture/: 1-introduction.md  10-frontend-architecture.md  11-backend-architecture.md  12-unified-project-structure.md  13-development-workflow.md  14-deployment-architecture.md  15-security-and-performance.md  16-testing-strategy.md  17-error-handling-strategy.md  18-monitoring-and-observability.md  19-coding-standards.md  2-high-level-architecture.md  20-checklist-results-report.md  3-tech-stack.md  4-data-models.md  5-internal-module-interfaces.md  6-components.md  7-external-apis.md  8-core-workflows.md  9-database-schema.md  CRITICAL-BUG-PSEUDONYM-COLLISION.md  audit-logging.md  batch-processing-spike-findings.md  gui-framework-decision.md  gui-ux-specification.md  index.md  table-of-contents.md
docs/prd/: PRD-UPDATES-v2-assisted-mode.md  checklist-results-report.md  epic-0-pre-sprint-preparation-v2-rescoped.md  epic-0-pre-sprint-preparation.md  epic-1-foundation-nlp-validation-v2-rescoped.md  epic-1-foundation-nlp-validation-week-1-4.md  epic-2-core-pseudonymization-engine-week-4-8.md  epic-3-cli-interface-batch-processing-week-8-11-ARCHIVED.md  epic-3-cli-interface-batch-processing-week-8-11.md  epic-3-cli-polish-batch-processing-week-11-13.md  epic-4-launch-readiness-llm-validation-week-11-13.md  epic-5-v1.1-quick-wins-gdpr-compliance.md  epic-6-v2.0-desktop-gui-accessibility.md  epic-7-v2.1-gui-polish-excel-ner-accuracy.md  epic-8-v2.2-output-format-preservation.md  epic-9-v3.0-nlp-accuracy-intelligence.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md
docs/qa/: PERF-001-manual-test-guide.md  PERF-001-manual-test-results.md  VALIDATION-UI-QUICK-GUIDE.md  accessibility-audit.md  accessibility-checklist.md  accessibility-testing.md  alpha-feedback-summary.md  backlog.md  documentation-effectiveness-baseline.md  llm-evaluation-scores.json  llm-test-responses.json  monitoring-baselines-4.4.md  monitoring-baselines-4.5.md  ner-accuracy-report.md  performance-stability-report.md  story-1.1-validation-report.md
docs/stories/: 0.4.validation-ui-ux-design.story.md  1.1.expand-test-corpus.story.md  1.2.comprehensive-nlp-library-benchmark.story.md  1.3.ci-cd-pipeline-setup.story.md  1.4.project-foundation-module-structure.story.md  1.5.walking-skeleton-basic-process-command.story.md  1.6.nlp-integration-basic-entity-detection.story.md  1.7-TESTING-SUMMARY.md  1.7.validation-ui-implementation.story.md  1.8.hybrid-detection-strategy.story.md  1.9.entity-deduplication-validation-ui.story.md  2.0.1.integration-tests-validation-workflow.story.md  2.1.pseudonym-library-system.story.md  2.2.compositional-pseudonymization-logic.story.md  2.3.french-name-preprocessing.story.md  2.4.encrypted-mapping-table.story.md  2.5.audit-logging.story.md  2.6.1.performance-benchmark-test.story.md  2.6.2.accuracy-validation-test-corpus.story.md  2.6.single-document-pseudonymization-workflow.story.md  2.7.batch-processing-scalability-spike.story.md  2.8.pseudonym-component-collision-fix.story.md  2.9.alpha-release-preparation.story.md  3.0.location-org-pseudonym-libraries.story.md  3.1.complete-cli-command-set.story.md  3.2.progress-reporting-batches.story.md  (+40 more)
faq/: index.html
fr/: index.html
gdpr_pseudonymizer/: exceptions.py
installation/: index.html
methodology/: index.html
refactoring-plan/: index.html
scripts/: analyze_compound_names.py  auto_annotate_corpus.py  batch_processing_spike.py  benchmark_hybrid.py  benchmark_nlp.py  build_gender_lookup.py  check_duplicates.py  check_names.py  count_entities.py  create_annotations.py  fix_annotations.py  generate_icon.py  install_spacy_model.py  llm_utility_test.py  standalone_entry.py  validate_annotations.py  validate_api.py  verify_mapping_consistency.py
search/: search_index.json
tests/: conftest.py  helpers.py
troubleshooting/: index.html
tutorial/: index.html
(+413 files in other folders)
