[tool.poetry]
name = "gdpr-pseudonymizer"
version = "0.1.0"
description = "CLI tool for GDPR-compliant pseudonymization of French text documents using NLP-based entity detection and reversible mapping"
authors = ["GDPR Pseudonymizer Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-org/gdpr-pseudonymizer"
repository = "https://github.com/your-org/gdpr-pseudonymizer"
keywords = ["gdpr", "pseudonymization", "nlp", "privacy", "data-protection"]
packages = [{include = "gdpr_pseudonymizer"}]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.7.0"
typer = "^0.9.0"
rich = "^13.7.0"
PyYAML = "^6.0"
cryptography = "^41.0.0"
SQLAlchemy = "^2.0.0"
structlog = "^23.2.0"
markdown-it-py = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-benchmark = "^4.0.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
stanza = "^1.7.0"
tomli = {version = "^2.0.0", python = "<3.11"}

[tool.poetry.scripts]
gdpr-pseudo = "gdpr_pseudonymizer.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by Black)
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/performance"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov-branch",
]
markers = [
    "benchmark: mark test as a benchmark test",
    "integration: mark test as an integration test",
    "slow: mark test as slow running",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["gdpr_pseudonymizer"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# mypy configuration
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "spacy.*",
    "stanza.*",
    "pytest.*",
]
ignore_missing_imports = true
