[tool.poetry]
name = "gdpr-pseudonymizer"
version = "1.0.6"
description = "CLI tool for GDPR-compliant pseudonymization of French text documents using NLP-based entity detection and reversible mapping"
authors = ["GDPR Pseudonymizer Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LioChanDaYo/RGPDpseudonymizer"
repository = "https://github.com/LioChanDaYo/RGPDpseudonymizer"
documentation = "https://liochandayo.github.io/RGPDpseudonymizer/"
keywords = ["gdpr", "pseudonymization", "nlp", "privacy", "data-protection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: French",
    "Operating System :: OS Independent",
]
packages = [{include = "gdpr_pseudonymizer"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
spacy = "^3.7.0"
typer = "^0.9.0"
click = ">=8.0.0,<8.2.0"
rich = "^13.7.0"
PyYAML = "^6.0"
cryptography = "^44.0.1"
SQLAlchemy = "^2.0.0"
structlog = "^23.2.0"
markdown-it-py = "^3.0.0"
readchar = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-benchmark = "^4.0.0"
black = "^24.3.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
stanza = "^1.7.0"
tomli = {version = "^2.0.0", python = "<3.11"}
pytest-timeout = "^2.4.0"
python-dotenv = "^1.0.0"
anthropic = "^0.40.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"

[tool.poetry.scripts]
gdpr-pseudo = "gdpr_pseudonymizer.cli.main:cli_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by Black)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"scripts/*.py" = ["E402"]  # Allow imports after sys.path modification
"tests/unit/test_*.py" = ["E402"]  # Allow imports after sys.path modification
"gdpr_pseudonymizer/cli/**/*.py" = ["UP007"]  # Typer 0.9.x requires Optional[] syntax

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/performance", "tests/accuracy"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov-branch",
]
markers = [
    "accuracy: mark test as an accuracy validation test (requires spaCy model)",
    "benchmark: mark test as a benchmark test",
    "integration: mark test as an integration test",
    "slow: mark test as slow running",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["gdpr_pseudonymizer"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# mypy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "spacy.*",
    "stanza.*",
    "pytest.*",
    "sqlalchemy",
    "sqlalchemy.*",
    "structlog",
    "structlog.*",
    "yaml",
    "readchar",
    "readchar.*",
]
ignore_missing_imports = true
